# Praktikum6_latihan

./: pyproject.toml
src/latihan/: streamlit.py
