[project]
name = "latihan"
version = "0.1.0"
description = "modul 6 praktikum"
authors = [
    {name = "dhafx", email = "dhafamaulana@webmail.umm.ac.id"},
]
dependencies = ["streamlit>=1.41.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
